fix scrollbar -- with animated div

--- a/AHK Source Code Files/Web-App/Neutron-WebApp/aoi-project-manager-newDesign/app-custom.css
+++ b/AHK Source Code Files/Web-App/Neutron-WebApp/aoi-project-manager-newDesign/app-custom.css
@@ -38,6 +38,9 @@ footer {
   max-height: 20px;
   color: white;
 }
+body{
+	-ms-overflow-style: none;		/* Hide the scrollbar */
+}
 
 #title-label {
 	font-weight: bold;
